# manim-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/: config.py  docs.py  main.py  mcp.py  models.py  renderer.py  sessions.py  templates.py
docs/superpowers/plans/: 2026-06-24-3d-axis-sphere.md  2026-06-24-dockerization.md  2026-06-24-mcp-server-side-logging.md  2026-06-24-mcp-tool-descriptions.md  2026-06-24-session-template.md  2026-06-25-template-catalog.md
docs/superpowers/specs/: 2026-06-24-3d-axis-sphere-design.md  2026-06-24-dockerization-design.md  2026-06-24-mcp-server-side-logging-design.md  2026-06-24-mcp-tool-descriptions-design.md  2026-06-24-session-template-design.md  2026-06-25-template-catalog-design.md
template/: clean-title.py  dark-grid.py  default.py  presentation-card.py  three-d.py
tests/: test_api.py  test_ci.py  test_config.py  test_makefile.py  test_mcp.py  test_renderer.py  test_sessions.py  test_templates.py  test_three_d_template.py
