[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-server"
version = "0.1.0"
description = "FastAPI and MCP service for trusted Python Manim rendering"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "mcp>=1.12",
  "manim>=0.20",
]

[tool.setuptools]
packages = ["app"]

[dependency-groups]
dev = ["httpx2", "pytest>=8.2", "ty>=0.0.18", "ruff>=0.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ty.environment]
python = "./.venv"
